--- a/nextslideplease/nextslideplease/Views/Home/Index.cshtml
+++ b/nextslideplease/nextslideplease/Views/Home/Index.cshtml
@@ -4,34 +4,23 @@
         <div class="col-2">User</div>
         <div class="col-4"><input type="text" id="userInput" /></div>
     </div>
-    <div class="row">
-        <div class="col-2">Message</div>
-        <div class="col-4"><input type="text" id="messageInput" /></div>
-    </div>
     <div class="row">&nbsp;</div>
     <div class="row">
         <div class="col-2">
-            <input type="button" id="nextButton" value="Send Message" />
+            <input type="button" id="previousButton" value="Previous Slide" />
         </div>
-    </div>
-    <div class="row">
-        <div class="col-4">
-            <input type="button" id="previousButton" value="Send Message" />
+        <div class="col-6">
+            <input type="button" id="nextButton" value="Next Slide" />
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-6" >
-        <h1 id="nextslide">Next Slide</h1>
-    </div>
-    <div class="col-12" >
+    <div class="col-4">
         <h1 id="previousslide">Previous Slide</h1>
     </div>
-</div>
-<div class="row">
-    <div class="col-12">
-        <hr />
+    <div class="col-2">
+        <h1 id="nextslide">Next Slide</h1>
     </div>
 </div>
 <div class="row">
